--- a/WebsiteBanHang/Views/SanPham/KQTimKiem.cshtml
+++ b/WebsiteBanHang/Views/SanPham/KQTimKiem.cshtml
@@ -15,7 +15,7 @@
     }
 </style>
 <div id="DSSanPham">
-    @if (Model == null || Model.Count == 0)
+    @if (Model == null || Model.Count == 0 || ViewBag.TuKhoaNull == "Null")
     {
         <h1 style="color:black; text-align:center">Không tìm thấy sản phẩm</h1>
     }
